# CheckLI

./: .gitignore  .gitmodules  README.md
ActiveLight/: CMakeLists.txt  README.md  conanfile.txt
ActiveLight/examples/: main.cpp
ActiveLight/src/: AcLight.cpp  AcLight.hpp  Redefinition.hpp  UTFString.cpp  UTFString.hpp  main.cpp
ActiveMap/: CMakeLists.txt  README.md
ActiveMap/src/: AcMap.cpp  AcMap.hpp  main.cpp  main.hpp
TgBot/: CMakeLists.txt  README.md  conanfile.txt
TgBot/src/: main.cpp
